# cdr-ai

./: .gitignore  README.md  config.py  pyproject.toml  server.py  wsgi.py
.github/workflows/: lint-format.yml
app/: __init__.py
app/api/: __init__.py  auth_token.py  celery_test.py  health.py
app/services/booklet_ocr_service/: section_extrator.py
app/services/celery_service/: test.py
app/utils/: api_response.py  logger.py
authentication/: auth.py
celery_worker/: celery_setup.py
configs/: celery_config.py  config.py
docs/: celery_setup.MD  supervisor.MD
tests/: redis_test.py  test_health.py
